Use array form for Runtime.exec calls
Replace string-based Runtime.exec invocations with the String[] overload for Windows, macOS, and Linux command variants. This prevents shell parsing issues and ensures URLs containing spaces or special characters are passed as single arguments, making the auto-open behavior more robust and secure.