@@ -29,11 +29,11 @@ public class SwaggerAutoOpen {
         String os = System.getProperty("os.name").toLowerCase();
         try {
             if (os.contains("win")) {
-                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+                Runtime.getRuntime().exec(new String[]{"rundll32", "url.dll,FileProtocolHandler", url});
             } else if (os.contains("mac")) {
-                Runtime.getRuntime().exec("open " + url);
+                Runtime.getRuntime().exec(new String[]{"open", url});
             } else {
-                Runtime.getRuntime().exec("xdg-open " + url);
+                Runtime.getRuntime().exec(new String[]{"xdg-open", url});
             }
             log.info("Opening Swagger UI: {}", url);
         } catch (IOException e) {
